verif/test/deca/codegen/invalid/if/if-null-verif.res
src/test/deca/codegen/invalid/if/if-null.deca:10:8: Incompatible types for comparison operator '==' between 'int' and 'null'
